--- a/wastrl/config/config
+++ b/wastrl/config/config
@@ -1,9 +1,12 @@
 [display]
-width = 80
-height = 50
+width = 120
+height = 60
 fullscreen = false
 
 [tdl_font]
 path = arial12x12.png
 greyscale = yes
 altLayout = yes
+
+[ui]
+dialog_max_width = 80
